--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -9,6 +9,6 @@
     <ion-item>
       <ion-input placeholder="Choose a username" [(ngModel)]="username"></ion-input>
     </ion-item>
-    <ion-button expand="full" (click)="onClick()" routerLink="../app">LET ME THRU</ion-button>
+    <ion-button expand="full" (click)="onClick()">LET ME THRU</ion-button>
   </ion-list>
 </ion-content>
