--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -6,4 +6,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+  <ion-list>
+    <ion-item *ngFor="let user of users$ | async">
+      <ion-label>{{user.name}}</ion-label>
+    </ion-item>
+  </ion-list>
+</ion-content>
